fix: home page animated lines gap

--- a/src/Components/Pages/Home/CareersSection/CareersSectionContent/CareersSectionContent.module.scss
+++ b/src/Components/Pages/Home/CareersSection/CareersSectionContent/CareersSectionContent.module.scss
@@ -1,7 +1,10 @@
 @import "src/Styles/mixins.scss";
 
-.content {
+.wrapper {
   position: relative;
+}
+
+.content {
   width: 374px;
 }
 
