--- a/src/Components/Pages/Home/IndustrySection/IndustryContent/IndustryContent.module.scss
+++ b/src/Components/Pages/Home/IndustrySection/IndustryContent/IndustryContent.module.scss
@@ -1,6 +1,6 @@
 @import "src/Styles/mixins.scss";
 
-.content {
+.wrapper {
   position: relative;
 }
 
