--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -20,7 +20,7 @@ body {
   font-family: Montserrat, sans-serif;
   width: var(--website-width);
   margin: 0 auto;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 img {
